fixes: scrollbar

--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -12,27 +12,36 @@
     flex-grow: 1;
     gap: 40px;
 
+    overflow-y: auto;
+
+    scrollbar-width: 3px;
+    scrollbar-color: var(--primary);
+    scrollbar-track-color: var(--purple);
+
     padding-right: 20px;
-    overflow-y: scroll;
-    scrollbar-width: 10px;
-    scrollbar-color: #ffffff;
-    scrollbar-track-color: #635d5d;
 }
 
 .info::-webkit-scrollbar {
-    background-color: #ffffff; /* Цвет ползунка прокрутки */
+    background-color: var(--primary);
     border-radius: 10px;
-    width: 10px; /* Ширина полосы прокрутки */
+    width: 3px;
 }
 
 .info::-webkit-scrollbar-thumb {
-    background-color:#635d5d; /* Цвет ползунка прокрутки */
-    border-radius: 10px; /* Скругление */
+    background-color: var(--purple);
+    border-radius: 3px;
 }
 
 @media (max-width: 1400px){
     .section{
         gap: 10px;
+    }
+    
+}
+
+@media (max-width: 576px) {
+    .info {
+        padding-right: 10px;
     }
     
 }
